amazon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: amazon-deployment
spec:
   replicas: 1
   selector:
      matchLabels:
         app: amazon
   template:
      metadata:
         labels:
            app: amazon

      spec:
         containers:
            - name: amazon-containers
              image: nginx
              ports:
              - containerPort: 80
