ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-resource
   annotations:
       nginx.ingress.kubernetes.io/rewrite-target: /
       cert-manager.io/cluster-issuer: "letsencrypt-prod"
       kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - amazon.kshitiz.site
      - flipkart.kshitiz.site
    secretName: tls-secret
spec:
  ingressClassName: nginx
  rules:
  - host: amazon.kshitiz.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: amazon-service
            port:
              number: 80
  - host: flipkart.kshitiz.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flipkart-service
            port:
               number: 80
  - host: kshitiz.site
    http:
      paths:
       - path: /about
         pathType: Prefix
         backend:
            service:
               name: random-service
               port:
                  number: 80
